# denso_inspection_ws

denso_inspection_ws/install/: local_setup.sh  setup.sh
denso_inspection_ws/log/: latest_build
denso_ros2_ws/api_server/: HowToRunServer.md  main.py
denso_ros2_ws/api_server/routes/: inspection.py
denso_ros2_ws/api_server/services/: ros_launcher.py
denso_ros2_ws/install/: local_setup.sh  setup.sh
denso_ros2_ws/install/bcap_core/include/bcap_core/: bcap_common.h  bcap_funcid.h  dn_additional.h  dn_com.h  dn_common.h  dn_device.h  dn_robotalk.h  dn_socket.h  dn_tcp.h  dn_thread.h  dn_udp.h
denso_ros2_ws/install/bcap_core/share/bcap_core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
denso_ros2_ws/log/: latest_build
denso_ros2_ws/src/camera_publisher/: package.xml  setup.py
denso_ros2_ws/src/camera_publisher/camera_publisher/: multi_pose_capture_node.py  robot_interface.py
denso_ros2_ws/src/camera_publisher/install/: local_setup.sh  setup.sh
denso_ros2_ws/src/camera_publisher/log/: latest_build
denso_ros2_ws/src/cobotta_inspection/: package.xml  setup.py
denso_ros2_ws/src/cobotta_inspection/cobotta_inspection/: camera_publisher.py  image_saver.py  inspection_executor.py  joint_loader.py  robot_interface.py
denso_ros2_ws/src/cobotta_inspection/cobotta_inspection/launch/: inspection_demo.launch.py
denso_ros2_ws/src/cobotta_inspection/resource/: car1.txt  car2.txt
denso_ros2_ws/src/install/: local_setup.sh  setup.sh
denso_ros2_ws/src/log/: latest_build
(+1213 files in other folders)
