<?xml version="1.0"?>
<package format="3">
  <name>cobotta_inspection</name>
  <version>0.1.0</version>
  <description>ROS 2 package for Cobotta inspection routines and camera integration</description>
  <maintainer email="your.email@example.com">Leandro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>